Added Transaction History API
