# banking/interactors/dtos.py
@@ -1,4 +1,6 @@
+import datetime
 from dataclasses import dataclass
+from typing import List
 
 
 @dataclass
@@ -21,3 +23,24 @@ class CreateAccountRequestDTO:
     name: str
     age: int
     mobile_number: str
+
+
+@dataclass
+class TransactionDTO:
+    transaction_id: int
+    transaction_type: int
+    amount: int
+    date_time: datetime.datetime
+    to_account_id: int
+
+
+@dataclass
+class TransactionHistoryResponseDTO:
+    transaction_history: List[TransactionDTO]
+
+
+@dataclass
+class MakeTransactionDTO:
+    from_account_number: int
+    to_account_number: int
+    amount: int
