# banking/views/make_transaction/api_wrapper.py
@@ -1,29 +1,24 @@
 from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
+import json
+from banking.storages.storage_implementation import StorageImplementation
+from banking.presenters.presenter_implementation import PresenterImplementation
+from banking.interactors.make_transaction import MakeTransaction
+from banking.interactors.dtos import MakeTransactionDTO
 
 
 @validate_decorator(validator_class=ValidatorClass)
 def api_wrapper(*args, **kwargs):
-    # ---------MOCK IMPLEMENTATION---------
-
-    try:
-        from banking.views.make_transaction.tests.test_case_01 \
-            import TEST_CASE as test_case
-    except ImportError:
-        from banking.views.make_transaction.tests.test_case_01 \
-            import test_case
-
-    from django_swagger_utils.drf_server.utils.server_gen.mock_response \
-        import mock_response
-    try:
-        from banking.views.make_transaction.request_response_mocks \
-            import RESPONSE_200_JSON
-    except ImportError:
-        RESPONSE_200_JSON = ''
-    response_tuple = mock_response(
-        app_name="banking", test_case=test_case,
-        operation_name="make_transaction",
-        kwargs=kwargs, default_response_body=RESPONSE_200_JSON,
-        group_name="")
-    return response_tuple
+    path_params = kwargs['path_params']
+    request_body = kwargs['request_data']
+    account_id = path_params['account_id']
+    storage = StorageImplementation()
+    presenter = PresenterImplementation()
+    interactor = MakeTransaction(storage)
+    make_transaction_dto = MakeTransactionDTO(
+        from_account_number=request_body['from_account_number'],
+        to_account_number=request_body['to_account_number'],
+        amount=request_body['amount']
+    )
+    return interactor.make_transaction(make_transaction_dto, presenter)
